# SynThesisAI

./: .gitignore  PR_MESSAGE.md  README.md  pyproject.toml  pytest.ini  setup.py  test_export.json
.kiro/specs/: README.md
.kiro/steering/: dspy-integration.md  dspy_development_standards.md  multi-agent-rl.md  quality-assurance.md  reasoning-traces.md  stream-domains.md  synthesisai-platform.md
app/: __init__.py  config.py  main.py
app/api/: __init__.py  batches.py  generation.py  problems.py  routes.py
app/models/: database.py  models.py  schemas.py
app/services/: __init__.py  batch_service.py  pipeline_service.py  problem_service.py
config/: development_settings.yaml  dspy_config.json  marl_config.yaml  quick_test_settings.yaml  settings.yaml
config/validation/: mathematics_validation.json  physics_validation.json  technology_validation.json  universal_validation.json
core/: __init__.py  agents.py
core/cli/: interface.py
core/dspy/: README.md  __init__.py  adapter.py  base_module.py  cache.py  cache_invalidation.py  cache_monitoring.py  checker_agent.py  config.py  continuous_learning.py  engineer_agent.py  exceptions.py  feedback.py  optimization_engine.py  optimization_workflows.py  quality_assessment.py  signature_registry.py  signatures.py  target_agent.py
core/engineer/: __init__.py  generate_prompt.py
core/marl/: __init__.py  config.py  (+4 more)
docs/: DSPy_Training_Data_Generation_Guide.md  USER_WORKFLOW_GUIDE.md  implementation-plan.md  marl_architecture_guide.md  marl_configuration_guide.md  marl_troubleshooting_guide.md  phase1_completion_report.md  phase2_completion_report.md  phase3_completion_report.md  synthesisai_enhancement.md
scripts/: cache_manager.py  run_all_phase_tests.py  run_development_test.py  run_fast_test.py  run_phase1_tests.py  run_phase2_tests.py  run_phase3_tests.py  run_user_workflow_test.py  test_parsing.py
tests/: conftest.py  test_generation_enhancements.py  test_performance_enhancements.py
utils/: __init__.py  benchmark_seed.py  config_loader.py  cost_estimation.py  costs.py  curriculum_strategy.py  exceptions.py  google_auth.py  helpers.py  json_utils.py  logging_config.py  performance_monitor.py  prompt_examples.py  save_results.py  system_messages.py  taxonomy.py  topic_classifier.py  validation.py
(+206 files in other folders)
